# deeplearningwithHY

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  forhy.txt  phasepro_data_1.py  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml
data/processed/: assemble_training_pairs_report.txt  curation_report.txt  multi_source_merge_report.txt  pairs_qc_report.txt  positives_strict.csv  positives_with_tiers.csv  protein_pairs.csv  protein_pairs_multi_source.csv  protein_pairs_selected.csv  strict_builder_report.txt  strict_positive_candidates.csv
data/processed/splits/: test.csv  train.csv  val.csv
docs/: index.md
docs/experiments/: exp_20260427_133504.md  exp_20260427_162432.md  exp_20260427_181307.md  exp_20260427_183853.md
models/checkpoints/: best_threshold.json  calibration_report_isotonic.json  calibration_report_platt.json  final_eval_comparison.json  pair_cross_attention.pt  pair_cross_attention_best.pt  pos_weight_selection.csv  test_metrics.json  test_metrics_isotonic.json  test_metrics_platt.json  train_log.csv
src/llps_diffusion/: __init__.py  config.py  predict.py  train.py
src/llps_diffusion/data/: assemble_training_pairs.py  build_candidate_b.py  build_retrieval_eval.py  build_strict_positives.py  curate_positives.py  datasets.py  diffusion_dataset.py  download_phasepro.py  generate_pairs.py  ingest_llpsdb.py  merge_positive_sources.py  pairs.py  pairs_qc.py  split_pairs.py  tokenization.py
src/llps_diffusion_predictor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_smoke.py
(+18 files in other folders)
